# spsid-gui

./: .gitignore  Makefile.am  TODO  configure.ac
setup_tools/: substvars.sh.in
web/: Makefile.am  Manifest.json  config.json.in  generate.py.in
web/source/: index.html.in
web/source/class/spsidgui/: AppWindow.js  Application.js  BrowseWindow.js  ContainedObjWindow.js  DialogWindow.js  DisplayObject.js  EditObject.js  NewObjTypeDW.js  ObjectList.js  ObjectLog.js  ObjectRefWidget.js  ObjectWindow.js  Schema.js  SearchObjects.js  SelectObject.js  SelectObjectDW.js  SpsidObject.js  SpsidRPC.js  TreeBrowserWindow.js
web/source/class/spsidgui/theme/: Appearance.js  Decoration.js  Theme.js
